add clj-async-profiler to dependencies