@@ -5,5 +5,8 @@
             :url "https://www.eclipse.org/legal/epl-2.0/"}
   :dependencies [[org.clojure/clojure "1.10.1"]
                  [flow-gl "1.0.0-SNAPSHOT"]
-                 [dali "0.1.0-SNAPSHOT"]]
-  :repl-options {:init-ns stred.core})
+                 [dali "0.1.0-SNAPSHOT"]
+                 [com.clojure-goes-fast/clj-async-profiler "1.0.4"]]
+  :repl-options {:init-ns stred.core}
+  :jvm-opts ["-Djdk.attach.allowAttachSelf"] ;; for clj-async-profiler
+  )
